2008-11-17  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: settings of each attribute of HTML element.

2008-11-16  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/backend.rb: backend service for application.

2008-11-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/htmlview.rb: HTML embedded view.

2008-10-23  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/ckview.rb, lib/gluon/po.rb: optional `id' and `class'
	embedded at template.

2008-10-19  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: obsolete link_uri and frame_uri.

2008-10-18  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: timing of passing path_args is changed.

2008-10-16  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/renderer.rb: api for any template.

	* lib/gluon/action.rb: ignored any no-pair keyword in
	query-string.

	* lib/gluon/urlmap.rb: optional path_info for class2path.

2008-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/ckview.rb: template like CGIKit 1.x.

2008-09-27  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/erbview.rb: default suffix changed.

	* lib/gluon/web/token.rb: independent session.

	* lib/gluon/po.rb: optional advices for presentation commands.

2008-09-22  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/po.rb: check reserved HTML element attributes.

2008-09-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/erbview.rb, lib/gluon/renderer.rb: changed view API.

	* lib/gluon/controller.rb: gluon controller syntax changed.

2008-09-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb, lib/gluon/controller.rb: explicit
	controller methods.

	* lib/gluon/erbview.rb, lib/gluon/renderer.rb: new framework for
	view.

2008-08-30  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/validation.rb: declarative validation for HTML form
	values.

2008-08-28  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/action.rb: page_import is new hook for imported