@@ -1,5 +1,8 @@
 2008-11-17  TOKI Yoshinori  <toki@freedom.ne.jp>
 
+	* lib/gluon/builder.rb: block syntax of back-end service for
+	configuration.
+
 	* lib/gluon/po.rb: settings of each attribute of HTML element.
 
 2008-11-16  TOKI Yoshinori  <toki@freedom.ne.jp>
